--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -37,7 +37,7 @@ Appstore Link: https://apps.apple.com/us/app/senior-assist-reminder-learning/id1
 | Heuristic & Description | Evaluation | Suggested Solution|
 |:----|:---------|:------|
 | **#1: Visibility of system status:** Users should always understand the status of where they are at & what they are doing by receiving feedback from the system. | **(2)** The page is very static. The user struggles where to start and struggles to understand where to first start typing. **(2)**:  There is no loading screen or initial tutorial to indicate the beginning. Upon opening the app, it jumps straight into the app's function without preface.       |  A cursor (blinking line to indicate where text appears) should be implemented in the "Title" field. Additionally, a quick loading screen (1 second) could help the user understand that the system has just start up and is ready to be used.  |
-| **#2: Match between system and the real world:** The design should follow colloquial language that are familiar to all. The design should avoid using unique jargon and provide information in a logical order. | **(2)** The "Print Waiting ..." is not a natural phrase people see, so it can be confusing to some.  | Instead of "Print Waiting ...", the Print button should simply be labeled as "Print". |
+| **#2: Match between system and the real world:** The design should follow colloquial language that are familiar to all. The design should avoid using unique jargon and provide information in a logical order. | **(2)** The "Print Waiting ..." is not a natural phrase people see often, so it can be confusing to some. The user would have to experiment and press it to understand what it actually does.  | Instead of "Print Waiting ...", the Print button should simply be labeled as "Print". |
 | **#3: User control and freedom:** Users should be able to easily undo an action if they make a mistake, as this instills confidence in the user.  | **(3)** This app does not have a single back button. This problem is especially bad when users hit the settings icon. There is no option to escape and the navigation bar changes to a new set of icons, which ultimately ruins consistency. **(3)** This app does not have the swipe feature to swipe between pages like most other apps. | Every page should have an "x" button or a back button so that users can change their minds. This is especially evident in the setting page because the only way to get back to the homepage is to complete exit the app. Additionally, the swipe feature should be implemented so that users can quickly switch pages. |
 | **#4: Consistency and standards:** Users should follow industry convention. Users should be able understand the meaning of iconography quickly and not have to guess.| **(3)** A lot of the icons are cryptic and some are even mislabeled. The first 2 icons on the navigation bar are nearly uninterpretable, and the last icon is colloquially recognized as a Profile icon, but instead serves to show a tutorial. | The icons should be properly selected and should fit the common standard. A profile icon should lead to the profile section. |
 | **#5: Error prevention:** Present users with a way to check if they actually want to go through with the action to prevent accidental errors. Prevent errors from occurring in the first place. | **(3)** The Picture/Profile Picture can be easily changed by tapping the icon (a rather large icon too). Users will often accidentally hit this icon which opens up the camera app. | The ability to change the Picture/Profile Picture should be indicated by a small X on the upper left corner of the icon. The X is a clear indication to get rid/change the profile picture. This way users will not accidentally hit it andopen the camera. |
