--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -72,7 +72,7 @@ Appstore Link: https://apps.apple.com/us/app/anvayaa/id1123534017
 | Heuristic & Description | Evaluation | Suggested Solution|
 |:----|:---------|:------|
 | **#1: Visibility of system status:** Users should always understand the status of where they are at & what they are doing by receiving feedback from the system. | **(1)** The app does indeed indicate that the app has started up by briefly showing the launch page/logo for a split second. The app as a whole is rather static, though. However it is still functional. **(1)** The app has a loading animation whenever pressing a button--this tells the users to be patient as the system is in the process of running. | This app has a carousel that shows representative pictures of their services. I think this could easily be made into a carousel that automatically swipes to the next image after around 2-3 seconds. This would show that the app is still live. |
-| **#2: Match between system and the real world:** The design should follow colloquial language that are familiar to all. The design should avoid using unique jargon and provide information in a logical order.  | **(3)** One button is labeled "PMS", which the user might have to guess what it means. Based on a different page and the wallet icon, the user can infer that it means "Payment Management System". Additionally, one item is labeled "Escalations" in the settings panel. This is rather cryptic--if they meant that something happened to the senior citizen, then this does not belong in Settings. | "PMS" should be spelled out so that the user does not have to guess what it is. Additionally, the "Escalations" section should be moved into another page that describes patient well-being. |
+| **#2: Match between system and the real world:** The design should follow colloquial language that are familiar to all. The design should avoid using unique jargon and provide information in a logical order.  | **(3)** One button is labeled "PMS", which the user might have to guess what it means. Based on a different page and the wallet icon, the user can infer that it means "Payment Management System". Additionally, one item is labeled "Escalations" in the settings panel. This is rather cryptic--if they meant that something happened to the senior citizen, then this does not belong in Settings.  **(2)** There is an overall lack of description as this app relies too heavily on iconography. Information is not provided in a logical order.| "PMS" should be spelled out so that the user does not have to guess what it is. Additionally, the "Escalations" section should be moved into another page that describes patient well-being. The app should add description and headings throughout the app to better clarify their purposes and functions.|
 | **#3: User control and freedom:** Users should be able to easily undo an action if they make a mistake, as this instills confidence in the user.   | **(1)** The top left of the subpages contain a distinct back button which is characterized as a back arrow. This is clear to the user that it means go back. The user can easily go back to the home page as the navigation bar is unchanging. | There is little to improve, as the pages have a back button and the user is prompted to Cancel whenever they perform an unwanted action. |
 | **#4: Consistency and standards:** Users should follow industry convention. Users should be able understand the meaning of iconography quickly and not have to guess. | **(1)** Most apps these days have a swipe left/right funtion to go forward or back. Some users may find themselves swiping left and right to navigate but realizing that this doesn't exist, so it may frustrate the user. | The app should implement this swiping-to-navigate feature to keep up with industry standards. |
 | **#5: Error prevention:** Present users with a way to check if they actually want to go through with the action to prevent accidental errors. Prevent errors from occurring in the first place.  | **(2)** Unwanted actions can be prevented if functions and sections should be described so that users do not need to think about what exactly is going on. For example, in the Profile page, we have a lot of potential actions the user can make, but with no description or heading to preface what is inside each button. **(3)** The Emergency button does not have any heading or description to say what exactly happens when the user presses it. The user may press it out of curiosity to see what it does. Experimentation, especially with buttons that contain greater consequences, should be avoided. | This app could benefit from more details to describe certain app functions instead of just short two to three word labels. As for the Emergency button, there should be information to describe what happens when pressed. |
@@ -80,5 +80,5 @@ Appstore Link: https://apps.apple.com/us/app/anvayaa/id1123534017
 |  **#7: Flexibility and efficiency of use:** Allow users to access shortcuts to speed up frequent interactions. These shortcuts should be optional but always available for expert users. | **(3)** There are no shortcuts of any sorts on this app.  | The app could implement a search bar so that the user can search for important functions or retrieve old messages/requests. |
 |**#8: Aesthetic and minimalist design** Interfaces should not contain irrelevant information. Extra info has to compete with other info and reduces relative visibility.| **(2)** The middle/top half of the app should contain the most relevant information & features. However, it is wasted on a carousel that repeats the exact same information below but as buttons. The carousel is deceiving because they look like buttons but are not. | Carousels of pictures should have an indicator that shows the progression of images to allow the user to understand the status (progression) of the carousel. However, the carousel should be removed and instead be filled with relevant updates/reports on their parents, for example. |
 |  **#9: Help users recognize, diagnose, and recover from errors** Error messages should be easy to understand and indicate the issue clearly. The error should also offer a solution.| **(1)** Users that do not have a paid plan yet cannot access some content. The system does indeed tell them to get a plan as a solution. | The system gives appropriate feedback--no changes need to be made. |
-| **#10: Help and documentation:** Users need to be able to access help in the event that they do not understand how to complete a task or need further explanation. | **(1)** There is a "Call Anvayaa" tab for easy access to information containing Anvayaa's addresses, phone numbers, and email. **(2)** There is no help section, and some items are not explained. For example, there is a large Emergency button in the middle of the screen without context. Additionally, there is little guidance offered to first time users. **(2)** There is an overall lack of description as this app relies too heavily on iconography. | The Emergency button should have a description as to what will happen if you press it. This app could benefit from adding a short tutorial to describe navigation and functions. |
+| **#10: Help and documentation:** Users need to be able to access help in the event that they do not understand how to complete a task or need further explanation. | **(1)** There is a "Call Anvayaa" tab for easy access to information containing Anvayaa's addresses, phone numbers, and email. **(2)** There is no help section or FAQ section, or a way to redirect to the Anvayaa website for more information/clarification. | Given the massive amount of extra space, the app can afford to enlarge the text. This app should add a help section for common issues or at least a  website link for users to click to redirect them to their website for more information. |
 
