--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -74,7 +74,7 @@ Appstore Link: https://apps.apple.com/us/app/anvayaa/id1123534017
 | **#1: Visibility of system status:** Users should always understand the status of where they are at & what they are doing by receiving feedback from the system. | **(1)** The app does indeed indicate that the app has started up by briefly showing the launch page/logo for a split second. The app as a whole is rather static, though. **(1)** The app has a loading animation whenever pressing a button--this tells the users to be patient as the system is in the process of running. | This app has a carousel that shows representative pictures of their services. I think this could easily be made into a carousel that automatically swipes to the next image after around 2-3 seconds. This would show that the app is still live. |
 | **#2: Match between system and the real world:** The design should follow colloquial language that are familiar to all. The design should avoid using unique jargon and provide information in a logical order.  | **(3)** One button is labeled "PMS", which the user might have to guess what it means. Based on a different page and the wallet icon, the user can infer that it means "Payment Management System". Additionally, one item is labeled "Escalations" in the settings panel. This is rather cryptic--if they meant that this tab documents something that happens to the patient, then this does not belong in Settings.  **(2)** There is an overall lack of description as this app relies too heavily on iconography. Information is not provided in a logical order.| "PMS" should be spelled out so that the user does not have to guess what it is. Additionally, the "Escalations" section should be moved into another page that describes patient well-being. The app should add description and headings throughout the app to better clarify their purposes and functions.|
 | **#3: User control and freedom:** Users should be able to easily undo an action if they make a mistake, as this instills confidence in the user.   | **(1)** The top left of the subpages contain a distinct back button which is characterized as a back arrow. This is clear to the user that it means go back. The user can easily go back to the home page as the navigation bar is unchanging. | There is little to improve, as the pages have a back button and the user is prompted to Cancel whenever they perform an unwanted action. |
-| **#4: Consistency and standards:** Users should follow industry convention. Users should be able understand the meaning of iconography quickly and not have to guess. | **(1)** Most apps these days have a swipe left/right funtion to go forward or back. Some users may find themselves swiping left and right to navigate but realizing that this doesn't exist, so it may frustrate the user. | The app should implement this swiping-to-navigate feature to keep up with industry standards. |
+| **#4: Consistency and standards:** Users should follow industry convention. Users should be able understand the meaning of iconography quickly and not have to guess. | **(1)** For the most part, the iconography fits the task. However, "Care Manager Visits' and "Free Care Manager Visits" share the same icons. While the user can still infer what these buttons do based on the text label, it is bad practice to have an icon represent two things.  **(1)** Most apps these days have a swipe left/right funtion to go forward or back. Some users may find themselves swiping left and right to navigate but realizing that this doesn't exist, so it may frustrate the user. | "Free Care Manager Vist" should have a unique icon instead of sharing it with "Care Manager Vists". Additionally, this feature does not really need a whole button for it. It could easily be under Care Manager Visits. Given the amount of buttons already shown, reducing unnecessary buttons is beneficial. On another note, the app should implement a swiping-to-navigate feature to keep up with industry standards. |
 | **#5: Error prevention:** Present users with a way to check if they actually want to go through with the action to prevent accidental errors. Prevent errors from occurring in the first place.  | **(2)** Unwanted actions can be prevented if functions and sections should be described so that users do not need to think about what exactly is going on. For example, in the Profile page, we have a lot of potential actions the user can make, but with no description or heading to preface what is inside each button. **(3)** The Emergency button does not have any heading or description to say what exactly happens when the user presses it. The user may press it out of curiosity to see what it does. Experimentation, especially with buttons that contain greater consequences, should be avoided. | This app could benefit from more details to describe certain app functions instead of just short two to three word labels. As for the Emergency button, there should be information to describe what happens when pressed. |
 |  **#6: Recognition rather than recall:** Users should not have to frequently memorize the interface. Additionally, important navigational items should be always visible and easily accessible.  | **(2)** The layout and navigation bar are pretty consistent. However, the content is organized in a gridlike manner with little visual hierarchy. Additionally, like items are not found in the same row in the grid. As such, users would need to scan the page to see what they are looking for. | Like items should be grouped together and have a heading attached to them so that there is hierarchy. For example, in the Profile page, there should be a heading called "My Plans" and have My Care Plan, Payment Management System, Regular Health Plan grouped together. The Reminders should not be in Profile, and Beneficiary Details and Electronic Medical should be grouped together. Grouping would minimize cognitive load.  |
 |  **#7: Flexibility and efficiency of use:** Allow users to access shortcuts to speed up frequent interactions. These shortcuts should be optional but always available for expert users. | **(3)** There are no shortcuts of any sorts on this app.  | The app could implement a search bar so that the user can search for important functions or retrieve old messages/requests. Additionally, for faster navigation, swipe-to-navigate to go back and forth between pages would be helpful as the app still functions without this but would benefit users that are already familiar with this feature. |
