--- a/Assignments/A01.md
+++ b/Assignments/A01.md
@@ -80,5 +80,5 @@ Appstore Link: https://apps.apple.com/us/app/anvayaa/id1123534017
 |  **#7: Flexibility and efficiency of use:** Allow users to access shortcuts to speed up frequent interactions. These shortcuts should be optional but always available for expert users. | **(3)** There are no shortcuts of any sorts on this app.  | The app could implement a search bar so that the user can search for important functions or retrieve old messages/requests. Additionally, for faster navigation, swipe-to-navigate to go back and forth between pages would be helpful as the app still functions without this but would benefit users that are already familiar with this feature. |
 |**#8: Aesthetic and minimalist design** Interfaces should not contain irrelevant information. Extra info has to compete with other info and reduces relative visibility.| **(2)** The middle/top half of the app should contain the most relevant information & features. However, it is wasted on a carousel that repeats the exact same information below but as buttons. The carousel is deceiving because they look like buttons but are not. | Carousels of pictures should have an indicator that shows the progression of images to allow the user to understand the status (progression) of the carousel. However, the carousel should be removed and instead be filled with relevant updates/reports on their parents, for example. |
 |  **#9: Help users recognize, diagnose, and recover from errors** Error messages should be easy to understand and indicate the issue clearly. The error should also offer a solution.| **(1)** Users that do not have a paid plan yet cannot access some content. The system does indeed tell them to get a plan as a solution. | The system gives appropriate feedback--no changes need to be made. |
-| **#10: Help and documentation:** Users need to be able to access help in the event that they do not understand how to complete a task or need further explanation. | **(1)** There is a "Call Anvayaa" tab for easy access to information containing Anvayaa's addresses, phone numbers, and email. **(2)** There is no help section or FAQ section, or a way to redirect to the Anvayaa website for more information/clarification. | Given the massive amount of extra space, the app can afford to enlarge the text, as some senior citizens have poorer vision. Additionally, this app should add a help section for common issues or at least a  website link for users to click to redirect them to their website for more information. |
+| **#10: Help and documentation:** Users need to be able to access help in the event that they do not understand how to complete a task or need further explanation. | **(1)** There is a "Call Anvayaa" tab for easy access to information containing Anvayaa's addresses, phone numbers, and email. **(2)** There is no help section or FAQ section, or a way to redirect to the Anvayaa website for more information/clarification. | Given the massive amount of extra space on this tab, the app can afford to enlarge the text, as some senior citizens have poorer vision. Additionally, this app should add a help section to troubleshoot common issues or at least a  website link for users to click to redirect them to their website for more information. |
 
